--- a/firmware/Cargo.toml
+++ b/firmware/Cargo.toml
@@ -11,6 +11,7 @@ cortex-m-rt = "0.7.3"
 cortex-m-rtic = "1.1.4"
 defmt = "0.3.4"
 defmt-rtt = "0.4.0"
+keyberon = "0.1.1"
 panic-probe = { version = "0.3.1", features = ["print-defmt"] }
 stm32f1xx-hal = { version = "0.10.0", features = ["stm32f103", "rtic", "stm32-usbd"] }
 usb-device = { version = "0.2.9", features = ["defmt"] }
